@@ -20,3 +20,20 @@
 #include "../client/DCPlusPlus.h"
 
 #include "Fdm-Util.h"
+#include "../Client/Text.h"
+
+
+tstring FdmUtil::findNickInTString(const tstring aLine) {
+	tstring::size_type i;
+	tstring::size_type j;
+
+	//Check For <Nick>
+	if (((i = aLine.find_first_of('<')) != string::npos) && ((j = aLine.find_first_of('>')) > i && j != string::npos))
+		return aLine.substr(i + 1, j - i - 1).c_str();
+	return NULL;
+}
+
+void FdmUtil::addIpToMainChat(tstring& aLine, string ip) {
+	if (ip != "")
+		aLine = (Text::toT("[ " + ip + " ] ") + aLine).c_str();
+}
