@@ -380,6 +380,7 @@ string ResourceManager::strings[] = {
 "Auto-away on minimize (and back on restore)", 
 "Automatically follow redirects", 
 "Automatically disconnect users who leave the hub", 
+"Don't automatically disconnect favorite users who leave the hub", 
 "Automatically search for alternative download locations", 
 "Automatically match queue for auto search hits", 
 "Auto-search limit", 
@@ -983,6 +984,7 @@ string ResourceManager::names[] = {
 "SettingsAutoAway", 
 "SettingsAutoFollow", 
 "SettingsAutoKick", 
+"SettingsAutoKickNoFavs", 
 "SettingsAutoSearch", 
 "SettingsAutoSearchAutoMatch", 
 "SettingsAutoSearchLimit", 
