@@ -8,6 +8,9 @@
 * Added display of CID in a few places
 * Updated yaSSL to 1.2.2
 * Fixed ADC hubname display (thanks ullner)
+* Advanced TTH rollback no longer performed if tree is invalid (thanks garg)
+* Option not to auto-disconnect favorite users (thanks ullner)
+* Fixed auto-disconnect delay (thanks uller)
 
 -- 0.689 2006-04-01 --
 * Fixed displaying of available bytes when user list is off
